<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLogo"
    android:theme="@android:style/ThemeOverlay.Material.Dark"
    tools:context=".SignUp">

    <androidx.appcompat.widget.Toolbar
        app:title="Sign Up"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/lay"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/input_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_bar"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:layout_marginBottom="10dp"
                android:id="@+id/fName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_design"
                android:hint="@string/f_name"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="#80FFFFFF"
                android:autofillHints="emailAddress" />

            <EditText
                android:layout_marginBottom="10dp"
                android:id="@+id/lName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_design"
                android:hint="@string/l_name"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="#80FFFFFF"
                android:autofillHints="emailAddress" />

            <EditText
                android:layout_marginBottom="10dp"
                android:id="@+id/phone"
                android:maxLength="12"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_design"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="#80FFFFFF"
                android:autofillHints="emailAddress" />

            <EditText
                android:layout_marginBottom="10dp"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_design"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="#80FFFFFF"
                android:autofillHints="emailAddress" />

            <EditText
                android:layout_marginBottom="24dp"
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_design"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="#80FFFFFF"
                android:autofillHints="emailAddress" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/prog"
            android:visibility="gone"
            android:indeterminateTint="@color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/btn_light_curve"
            android:padding="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary">
        </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:layout_marginTop="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/havAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:text="@string/already_acct"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/powered_by_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.055">
        </TextView>

    </LinearLayout>

</RelativeLayout>