<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".HomePage">

    <LinearLayout
        android:id="@+id/wel"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:textSize="16sp"
            android:id="@+id/welcome"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:gravity="end"
            android:layout_weight="1"
            android:text="@string/sign_out"
            android:textSize="16sp"
            android:id="@+id/sign_out"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dir"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_below="@id/wel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:text="@string/request_a"
            android:textSize="16sp"
            android:id="@+id/request_a"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="24dp"
            android:text="@string/frm"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginTop="4dp"
            android:id="@+id/edtF"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_design_wh"
            android:hint="@string/pck"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorAccent"
            android:autofillHints="emailAddress" />

        <TextView
            android:layout_marginTop="12dp"
            android:text="@string/to"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginTop="4dp"
            android:id="@+id/edtT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_design_wh"
            android:hint="@string/drp"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorAccent"
            android:autofillHints="emailAddress" />

    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_below="@+id/dir"
        android:layout_above="@+id/req_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:visibility="gone"
            android:id="@+id/arvLayout"
            android:padding="16dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/drv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:id="@+id/dName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:id="@+id/dTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:id="@+id/dRide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:id="@+id/dColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:id="@+id/dReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:id="@+id/dDis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ListView
            android:id="@+id/ls"
            android:dividerHeight="2dp"
            android:divider="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/prog"
            android:visibility="gone"
            android:indeterminateTint="@color/colorAccent"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/req_btn"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_accent_curve"
        android:layout_alignParentBottom="true"
        android:text="@string/request_ride"
        android:textColor="@color/white">
    </androidx.appcompat.widget.AppCompatButton>

</RelativeLayout>